# react-native-media-library

./: .npmignore  CONTRIBUTING.md  LICENSE  MediaLibrary.podspec  README.md  package.json  react-native-media-library.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: MediaAssetFileNative.cpp  MediaAssetFileNative.h  MediaLibrary.cpp  MediaLibrary.h  ThreadPool.h
android/src/main/java/com/medialibrary/: AppContentResolver.kt  AppCursor.kt  AssetItemKeys.kt  Base64Downloader.kt  FetchVideoFrame.kt  FilesUtils.kt  ManipulateImages.kt  MediaLibraryModule.kt  MediaLibraryPackage.kt  MediaLibraryUtils.kt  MedialLibraryCreateAsset.kt  files.utils.ts.kt
android/src/main/java/com/reactnativemedialibrary/: AppContentResolver.kt  AppCursor.kt  AssetItemKeys.kt  Base64Downloader.kt  CombineImages.kt  FetchVideoFrame.kt  FilesUtils.kt  GetAssetsCallback.java  ManipulateImages.kt  MediaLibrary.java  MediaLibrary.kt  MediaLibraryModule.java  MediaLibraryModule.kt  MediaLibraryPackage.java  MediaLibraryPackage.kt  MediaLibraryUtils.java  MediaLibraryUtils.kt  MedialLibraryCreateAsset.java  MedialLibraryCreateAsset.kt  NativeMediaLibrarySpec.kt  files.utils.ts.kt
example/: app.json  babel.config.js  metro.config.js  package.json  react-native.config.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/medialibrary/example/: MainActivity.kt  (+1 more)
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/MediaLibraryExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MediaLibraryExample.xcodeproj/: project.pbxproj
example/ios/MediaLibraryExample.xcodeproj/xcshareddata/xcschemes/: MediaLibraryExample.xcscheme
example/ios/MediaLibraryExample.xcworkspace/: contents.xcworkspacedata
example/patches/: fast-image.patch  react-native-fast-image+8.6.3.patch
example/src/: App.tsx  CollectionsList.tsx  CropImageExample.tsx  ImagesList.tsx  ImagesMerge.tsx
example/src/components/MediaPicker/: AlbumSelector.tsx  BottomSheet.tsx  MediaPickerSheet.tsx  PhotoGrid.tsx  index.ts
example/src/screens/: index.ts
example/src/screens/modal/: Base64Image.tsx  CollectionsList.tsx  CombineImages.tsx  ExportVideo.tsx  ImagesList.tsx  MediaPickerExample.tsx  SloMo.tsx
ios/: AssetsManager.h  AssetsManager.mm  AssetsManager.swift  Base64Downloader.h  Base64Downloader.m  Base64Downloader.swift  CombineImages.h  CombineImages.m  FetchVideoFrame.h  FetchVideoFrame.mm  Helpers.h  Helpers.mm  ImageResize.h  ImageResize.m  ImageSize.h  ImageSize.m  LibraryCombineImages.h  LibraryCombineImages.m  LibraryCombineImages.swift  LibraryImageResize.h  LibraryImageResize.m  LibraryImageResize.swift  LibraryImageSize.h  LibraryImageSize.m  LibraryImageSize.swift  LibrarySaveToCameraRoll.h  LibrarySaveToCameraRoll.m  LibrarySaveToCameraRoll.swift  Macros.h  MediaAssetFileNative.cpp  MediaAssetFileNative.h  MediaAssetManager.h  MediaAssetManager.m  MediaLibrary.h  MediaLibrary.mm  SaveToCameraRoll.h  SaveToCameraRoll.m  json.h
ios/MediaLibrary.xcodeproj/: project.pbxproj
src/: NativeMediaLibrary.ts  index.tsx
(+6 files in other folders)
